fix(LanguageSelector): set language selector label visibility to hidden

--- a/packages/styles/scss/components/footer/_language-selector.scss
+++ b/packages/styles/scss/components/footer/_language-selector.scss
@@ -130,7 +130,7 @@
       height: 0;
       padding: 0;
       margin: 0;
-      display: block;
+      visibility: hidden;
     }
   }
 }
